# non-stream

./: .gitignore  default.nix  pyproject.toml  server.py
.github/workflows/: ci.yml
npins/: sources.json
tests/: conftest.py  test_server.py
